2002-11-18 Ronald Oussoren <oussoren@cistron.nl>
	* Doc/classes.txt: new file documenting how classes work
	* Lib/objc: Reformatted (4-space indent) and remove superfluos 
	  whitespace

2002-11-17  Bill Bumgarner  <bbum@codefab.com>

	* Normalize whitespace
	* allow extractClasses() to be called multiple times for one nib
	  (well it was allowed, but now less double work is performed)
	* renamed NibClassBuilder to _NibClassBuilder: AutoBaseClass is
	  not the way it's done.
	* added module doc string and variaus method doc strings
	* renamed loadClassesEtc. to extractClasses(), has a signature
	  is as discussed on the list (ie. can parse nibs by name or by
	  path)
	* Changed name of NibLoader to NibClassBuilder

	[Changes from Just van Rossum -- bbum acting as proxy because
	Just's sourceforge account is broken]

2002-11-15  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a minor bug in NibLoader.py when specifying NIBs without
	the .nib extension

2002-11-15 Ronald Oussoren <oussoren@cistron.nl>
	- Modules/objc: Remove sel_class_method and sel_allocator from
	  selector objects, and introduce a sel_flags.
	- Modules/objc/selector.m: Add Python visible attributes that allow
	  reflection to access more information about selectors/methods.
	- Modules/objc/selector.m: donate_ref attribute is writable, allowing
	  python code to update this flag. Should be used only in setup
	  code.
	- Also check for updated Objective-C method-tables in obj.__getattr__,
	  PyObject_GenericGetAttr directly pokes into the class __dict__
	  instead of calling objc_class.__getattr__.

2002-11-15  Bill Bumgarner  <bbum@codefab.com>
	* Changed the names of various methods from loadNib to
	loadClassesForNib to better follow the Cocoa APIs.
	* Just rewrote the NibLoader.py;  added the new version.

	* Modified NibLoader to not generate a class for FirstResponder.
	* Integrated Just van Rossum's NibLoader script into the module.

2002-11-13 Ronald Oussoren <oussoren@cistron.nl>