@@ -39,12 +39,12 @@ except:
 
 
 
-NSBundle = objc.lookup_class('NSBundle')
+NSBundle = objc.lookUpClass('NSBundle')
 
 def load_bundle(path):
         NSBundle.bundleWithPath_(path).load()
 	classes = [ cls 
-		for  cls in objc.class_list()
+		for  cls in objc.lookUpClass()
 		if path == NSBundle.bundleForClass_(cls).bundlePath() ]
 	return classes
 classes = load_bundle(sys.argv[1])
